--- a/apps/web/app/[locale]/styles.css
+++ b/apps/web/app/[locale]/styles.css
@@ -186,38 +186,22 @@
 
 /* Force Tailwind grid classes to work on deployment */
 @media (min-width: 768px) {
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
   
-  .md\:col-span-2 {
-    grid-column: span 2 / span 2 !important;
+  .md\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(200px, 1fr)) !important;
   }
   
-  .md\:col-span-4 {
-    grid-column: span 4 / span 4 !important;
+  /* Fix borders for 2x2 grid */
+  .md\:grid-cols-2 > div:nth-child(2n) {
+    border-right: none !important;
   }
   
-  .md\:row-span-2 {
-    grid-row: span 2 / span 2 !important;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr)) !important;
-  }
-  
-  .lg\:col-span-1 {
-    grid-column: span 1 / span 1 !important;
-  }
-  
-  .lg\:col-span-2 {
-    grid-column: span 2 / span 2 !important;
-  }
-  
-  .lg\:col-span-3 {
-    grid-column: span 3 / span 3 !important;
+  .md\:grid-cols-2 > div:nth-child(3),
+  .md\:grid-cols-2 > div:nth-child(4) {
+    border-bottom: none !important;
   }
 }
 
